--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ boto3==1.13.18
 botocore==1.16.18
 dj-database-url==0.5.0
 Django==3.0.6
+django-cors-headers==3.3.0
 djangorestframework==3.11.0
 docutils==0.15.2
 gunicorn==20.0.4
