--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "moment": "^2.26.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-ga": "^3.1.2",
     "react-items-carousel": "^2.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
