--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "NODI",
+  "name": "Northwestern Open Data Initiative",
   "icons": [
     {
       "src": "NODI.png",
