--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ isort==4.3.21
 jmespath==0.10.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
-psycopg2==2.8.5
+psycopg2-binary
 pycodestyle==2.6.0
 pylint==2.5.2
 python-dateutil==2.8.1
